--- a/tools/identity-resolution/identity-converter/Azure.Sdk.Tools.IdentityConverter.csproj
+++ b/tools/identity-resolution/identity-converter/Azure.Sdk.Tools.IdentityConverter.csproj
@@ -3,9 +3,9 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>Azure.Sdk.Tools.IdentityResolver</RootNamespace>
+    <RootNamespace>Azure.Sdk.Tools.IdentityConverter</RootNamespace>
     <PackAsTool>true</PackAsTool>
-    <ToolCommandName>identity-resolver</ToolCommandName>
+    <ToolCommandName>identity-converter</ToolCommandName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\common\common.csproj" />
+    <ProjectReference Include="..\identity-resolution\identity-resolution.csproj" />
   </ItemGroup>
 
 </Project>
