--- a/tools/notification-configuration/github-codeowner-subscriber/Azure.Sdk.Tools.GithubCodeownerSubscriber.csproj
+++ b/tools/notification-configuration/github-codeowner-subscriber/Azure.Sdk.Tools.GithubCodeownerSubscriber.csproj
@@ -15,7 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\code-owners-parser\CodeOwnersParser\Azure.Sdk.Tools.CodeOwnersParser.csproj" />
-    <ProjectReference Include="..\common\common.csproj" />
+    <ProjectReference Include="..\..\identity-resolution\identity-resolution\identity-resolution.csproj" />
   </ItemGroup>
 
 </Project>
