Update triggers to include dependency changes (#2423)

--- a/tools/notification-configuration/ci.yml
+++ b/tools/notification-configuration/ci.yml
@@ -9,6 +9,8 @@ trigger:
   paths:
     include:
       - tools/notification-configuration
+      - tools/code-owners-parser/CodeOwnersParser
+      - tools/identity-resolution/identity-resolution
 
 pr:
   branches:
@@ -20,6 +22,8 @@ pr:
   paths:
     include:
       - tools/notification-configuration
+      - tools/code-owners-parser/CodeOwnersParser
+      - tools/identity-resolution/identity-resolution
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-tool-dotnet.yml
