--- a/tools/test-proxy/docker/dockerfile
+++ b/tools/test-proxy/docker/dockerfile
@@ -1,17 +1,12 @@
-# we need access to dotnet dev certs tool to properly import the certificate
-# only .NET 5.0 and higher actually has access to --import a specific target certificate
-FROM mcr.microsoft.com/dotnet/sdk:5.0.400-alpine3.13 AS dotnet_build_cache
-FROM mcr.microsoft.com/dotnet/aspnet:5.0.9-alpine3.13 AS dotnet_runtime_cache
-
-FROM mcr.microsoft.com/dotnet/sdk:3.1-alpine3.14 AS build
+FROM mcr.microsoft.com/dotnet/sdk:6.0-alpine3.14 AS build
 
 # copy the code
 COPY docker_build/Azure.Sdk.Tools.TestProxy/ /proxyservercode
 
 # publish the package
-RUN cd /proxyservercode && dotnet publish -c Release -o /proxyserver -f netcoreapp3.1
+RUN cd /proxyservercode && dotnet publish -c Release -o /proxyserver -f net6.0
 
-FROM mcr.microsoft.com/dotnet/aspnet:3.1-alpine3.14
+FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine3.14
 
 ENV \
     NO_AT_BRIDGE=1 \
@@ -22,9 +17,8 @@ ENV \
     # default URL of localhost:5000 or localhost:50001 are not usable from outside the container
     ASPNETCORE_URLS="http://0.0.0.0:5000;https://0.0.0.0:5001"
 
-# dotnet-dev-certs tool is not included in aspnet image, so manually copy from sdk image (along with the .NET runtime associated)
-COPY --from=dotnet_build_cache /usr/share/dotnet/sdk/5.0.400/DotnetTools/dotnet-dev-certs/5.0.9-servicing.21365.3/tools/net5.0/any/ /dotnet-dev-certs
-COPY --from=dotnet_runtime_cache ["/usr/share/dotnet/shared/Microsoft.NETCore.App/", "/usr/share/dotnet/shared/Microsoft.NETCore.App/"]
+# dotnet-dev-certs tool is not included in aspnet image, so manually copy from sdk image
+COPY --from=build /usr/share/dotnet/sdk/6.0.101/DotnetTools/dotnet-dev-certs/6.0.1-servicing.21567.14/tools/net6.0/any/ /dotnet-dev-certs
 
 # prep the machine dev certificate
 COPY docker_build/$CERT_IMPORT_SH docker_build/dotnet-devcert.pfx docker_build/dotnet-devcert.crt $CERT_FOLDER/
@@ -40,9 +34,7 @@ RUN \
     && chmod +x $CERT_FOLDER/$CERT_IMPORT_SH \
     && $CERT_FOLDER/$CERT_IMPORT_SH \
     && rm $CERT_FOLDER/$CERT_IMPORT_SH \
-    && mkdir -p /srv/testproxy \
-    && rm -rf /usr/share/dotnet/shared/Microsoft.NETCore.App/5.0.9 \
-    && rm -rf /dotnet-dev-certs
+    && mkdir -p /srv/testproxy
 
 EXPOSE 5000 5001
 
