--- a/.azure-pipelines/apiview.yml
+++ b/.azure-pipelines/apiview.yml
@@ -95,6 +95,21 @@ stages:
               mavenPomFile: 'src/java/apiview-java-processor/pom.xml'
               goals: 'clean package'
 
+          # Below 3 steps to package Python 3.9 is temporary work around until we have sandboxing ready
+          - task: UsePythonVersion@0
+
+          - script: |
+              pip install $(PythonParserPackagePath) $(ProtocolParserPackagePath)
+              pip install virtualenv aiohttp chardet trio
+            displayName: 'Setup Python Environment'
+
+          - pwsh: |
+              $pythonPath = split-path (get-command python).Path -Parent
+              Write-Host "Python home path $($pythonPath)"
+              copy-item -Path "$pythonPath" -Destination "$(Build.ArtifactStagingDirectory)/APIViewWeb/Python" -Recurse -Force
+              Write-Host "Packaged Python"
+            displayName: 'Package Python'
+
           - pwsh: |
               copy-item -Path $(PythonParserPackagePath) -Destination $(Build.ArtifactStagingDirectory)/APIViewWeb/api-stub-generator -Recurse -Force
               copy-item -Path $(ProtocolParserPackagePath) -Destination $(Build.ArtifactStagingDirectory)/APIViewWeb/protocol-stub-generator -Recurse -Force
