[pipeline generator] Build out weekly test pipelines for all services and fix scheduling (#2484)
* Add weekly pipeline to pipeline generation CI

* Add day bucketing for tests-weekly pipeline convention

* Add weekly pipeline generation to prepare-pipelines template

* [pipeline generator] Add option to overwrite triggers

* [pipeline generator] Add check for yaml files that will result in pipeline name collisions

* Fix duplicate PR build triggers being added

* Set hasChanges to true if branch filters or source type are updated for PR trigger

* Add succeeded condition to pipeline generation pipelines

--- a/eng/pipelines/pipeline-generation.yml
+++ b/eng/pipelines/pipeline-generation.yml
@@ -142,7 +142,13 @@ jobs:
   - script: |
       $(Pipeline.Workspace)/pipeline-generator/pipeline-generator --organization https://dev.azure.com/azure-sdk --project internal --prefix $(Prefix) --path $(Pipeline.Workspace)/$(RepositoryName)/sdk --endpoint Azure --repository Azure/$(RepositoryName) --convention tests --agentpool Hosted --branch refs/heads/$(DefaultBranch) --patvar PATVAR --debug $(TestOptions)
     displayName: 'Generate test pipelines for: $(RepositoryName)'
-    condition: ne(variables['TestOptions'],'')
+    condition: and(succeeded(), ne(variables['TestOptions'],''))
+    env:
+      PATVAR: $(azuresdk-azure-sdk-devops-pipeline-generation-pat)
+  - script: |
+      $(Pipeline.Workspace)/pipeline-generator/pipeline-generator --organization https://dev.azure.com/azure-sdk --project internal --prefix $(Prefix) --path $(Pipeline.Workspace)/$(RepositoryName)/sdk --endpoint Azure --repository Azure/$(RepositoryName) --convention weekly --agentpool Hosted --branch refs/heads/$(DefaultBranch) --patvar PATVAR --debug $(TestOptions)
+    displayName: 'Generate weekly test pipelines (multi-cloud) for: $(RepositoryName)'
+    condition: and(succeeded(), ne(variables['TestOptions'],''))
     env:
       PATVAR: $(azuresdk-azure-sdk-devops-pipeline-generation-pat)
 
