--- a/tools/js-sdk-release-tools/package.json
+++ b/tools/js-sdk-release-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure-tools/js-sdk-release-tools",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "",
   "scripts": {
     "start": "node dist/changelogToolCli.js",
@@ -19,7 +19,7 @@
   "dependencies": {
     "@azure-tools/openapi-tools-common": "^1.2.2",
     "@ts-common/azure-js-dev-tools": "^22.4.22",
-    "colors": "^1.4.0",
+    "colors": "1.4.0",
     "command-line-args": "^5.1.1",
     "comment-json": "^4.1.0",
     "lodash": "^4.17.21",
