sdk-testgen: testmodeler: load new api scenario  (#2516)
* upgrade to oav@2.10.2
* publish testmodeler&gotest

--- a/tools/sdk-testgen/swagger/specification/signalr/resource-manager/Microsoft.SignalRService/preview/2020-07-01-preview/test-scenarios/signalR.yaml
+++ b/tools/sdk-testgen/swagger/specification/signalr/resource-manager/Microsoft.SignalRService/preview/2020-07-01-preview/test-scenarios/signalR.yaml
@@ -2,8 +2,8 @@ scope: ResourceGroup
 variables:
   resourceName: "aaa"
   resourceGroupPrefix: "apiTest-"
-testScenarios:
-  - description: Microsoft.SignalRService/signalR SignalR_CreateOrUpdate
+scenarios:
+  - description: Microsoft_SignalRService_SignalR_CreateOrUpdate
     steps:
       - step: Generate_Unique_string
         armTemplateDeployment: ./generate_unique_string.json
