--- a/tools/sdk-testgen/packages/autorest.gotest/package.json
+++ b/tools/sdk-testgen/packages/autorest.gotest/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@autorest/gotest",
-    "version": "1.2.0",
+    "version": "1.3.0",
     "description": "Autorest extension for go test generation",
     "main": "dist/index.js",
     "scripts": {
@@ -46,7 +46,7 @@
         "@autorest/codemodel": "~4.17.2",
         "@autorest/extension-base": "~3.4.4",
         "@autorest/go": "4.0.0-preview.34",
-        "@autorest/testmodeler": "~1.1.0",
+        "@autorest/testmodeler": "~2.0.0",
         "@azure-tools/codegen": "~2.9.0",
         "@azure-tools/linq": "~3.1.0",
         "@types/lodash": "~4.14.176",
@@ -58,7 +58,7 @@
         "lodash": "~4.17.21",
         "node-yaml": "^3.2.0",
         "nunjucks": "^3.2.3",
-        "oav": "~2.8.3",
+        "oav": "2.11.3",
         "reflect-metadata": "~0.1.13"
     },
     "files": [
