--- a/tools/sdk-testgen/packages/autorest.testmodeler/package.json
+++ b/tools/sdk-testgen/packages/autorest.testmodeler/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@autorest/testmodeler",
-    "version": "1.1.0",
+    "version": "2.0.0",
     "description": "Autorest extension for testmodeler",
     "main": "dist/index.js",
     "scripts": {
@@ -54,7 +54,7 @@
         "jsonpath": "^1.1.1",
         "lodash": "~4.17.21",
         "node-yaml": "^3.2.0",
-        "oav": "~2.8.3",
+        "oav": "2.11.3",
         "reflect-metadata": "~0.1.13"
     },
     "files": [
