--- a/tools/sdk-testgen/swagger/specification/compute/resource-manager/Microsoft.Compute/stable/2021-03-01/test-scenarios/sample.yaml
+++ b/tools/sdk-testgen/swagger/specification/compute/resource-manager/Microsoft.Compute/stable/2021-03-01/test-scenarios/sample.yaml
@@ -1,31 +1,30 @@
 scope: ResourceGroup
 variables:
   resourceName: signalrswaggertest4
-  parameters.name: signalrswaggertest4
   fakeStepVar: signalrswaggertest4
 prepareSteps:
-  - step: Delete proximity placement group
+  - step: Delete-proximity-placement-group
     exampleFile: ../examples/DeleteAProximityPlacementGroup.json
-testScenarios:
+scenarios:
   - description: Microsoft.SignalRService/Basic_CRUD
     variables:
       fakeScenarioVar: signalrswaggertest5
     steps:
       - step: Generate_Unique_Name
-        armTemplateDeployment: ./peArmTemplate/Generate_Unique_name_template.json
-      - step: Create or Update a proximity placement group.
+        armTemplate: ./peArmTemplate/Generate_Unique_name_template.json
+      - step: Create-or-Update-a-proximity-placement-group
         exampleFile: ../examples/CreateOrUpdateAProximityPlacementGroup.json
         outputVariables: 
           fakeScenarioVar:
             fromResponse: /id
-      - step: Delete proximity placement group
+      - step: Delete-proximity_placement_group
         exampleFile: ../examples/DeleteAProximityPlacementGroup.json
-      - step: Create a vm with Host Encryption using encryptionAtHost property.
+      - step: Create_a_vm_with_Host_Encryption_using_encryptionAtHost_property
         exampleFile: ../examples/CreateAVmWithEncryptionAtHost.json
         variables:
           fakeStepVar: signalrswaggertest6
   - description: Microsoft.SignalRService/DeleteOnly
     steps:
-      - step: Delete proximity placement group
+      - step: Delete_proximity_placement_group
         exampleFile: ../examples/DeleteAProximityPlacementGroup.json
           
