--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,20 +1,21 @@
 ###########
 # Eng Sys
 ###########
-/eng/       @azure/azure-sdk-eng
-/eng/common/TestResources/  @heaths @benbp @weshaggard
+/eng/                            @azure/azure-sdk-eng
+/eng/common/                     @sima-zhu @weshaggard @benbp
+/eng/common/TestResources/       @benbp @weshaggard @heaths
 
 ###########
-# Eng Sys Services
+# Eng Sys Tools
 ###########
-/tools/ @azure/azure-sdk-eng
-/tools/check-enforcer/ @weshaggard @praveenkuttappan
-/tools/pipeline-witness/ @weshaggard @praveenkuttappan
-/tools/webhook-router/ @weshaggard @praveenkuttappan
-/tools/github-issues/ @weshaggard @praveenkuttappan @AlexGhiondea
-/tools/pipeline-generator/ @weshaggard @benbp
-/tools/test-proxy/ @scbedd @mikeharder
-/tools/stress-cluster/ @benbp @ckairen
-/tools/mock-service-host/ @changlong-liu @tadelesh
-/tools/sdk-testgen/ @changlong-liu @tadelesh
-/tools/js-sdk-release-tools/ @weidong @qiaozha
+/tools/                          @azure/azure-sdk-eng
+/tools/check-enforcer/           @praveenkuttappan @weshaggard
+/tools/pipeline-witness/         @praveenkuttappan @weshaggard
+/tools/webhook-router/           @praveenkuttappan @weshaggard
+/tools/github-issues/            @praveenkuttappan @weshaggard @AlexGhiondea
+/tools/pipeline-generator/       @weshaggard @benbp
+/tools/test-proxy/               @scbedd @mikeharder
+/tools/stress-cluster/           @benbp @ckairen
+/tools/mock-service-host/        @changlong-liu @tadelesh
+/tools/sdk-testgen/              @changlong-liu @tadelesh
+/tools/js-sdk-release-tools/     @weidong @qiaozha
