Update stress examples/generator to set imagePullPolicy: Always (#2652)

--- a/tools/stress-cluster/chaos/examples/network-stress-example/templates/testjob.yaml
+++ b/tools/stress-cluster/chaos/examples/network-stress-example/templates/testjob.yaml
@@ -11,6 +11,7 @@ spec:
   containers:
     - name: network-example
       command: ["bash", "poll.sh"]
+      imagePullPolicy: Always
       image: {{ .Values.image }}
       {{- include "stress-test-addons.container-env" . | nindent 6 }}
 {{- end -}}
