--- a/.azure-pipelines/apiview-sync-staging.yml
+++ b/.azure-pipelines/apiview-sync-staging.yml
@@ -13,7 +13,8 @@ stages:
     jobs:
       - job: 'BlobCopy'
         pool:
-          vmImage: 'windows-2019'
+          name: azsdk-pool-mms-win-2019-general
+          vmImage: MMS2019
 
         steps:
         - pwsh: |
