--- a/.azure-pipelines/apiview.yml
+++ b/.azure-pipelines/apiview.yml
@@ -53,7 +53,8 @@ stages:
       - job: 'Build'
 
         pool:
-          vmImage: 'windows-2019'
+          name: azsdk-pool-mms-win-2019-general
+          vmImage: MMS2019
 
         steps:
           - task: NodeTool@0
@@ -152,7 +153,8 @@ stages:
           - 'Build'
 
         pool:
-          vmImage: 'windows-2019'
+          name: azsdk-pool-mms-win-2019-general
+          vmImage: MMS2019
 
         steps:
 
