--- a/eng/pipelines/pipeline-generation.yml
+++ b/eng/pipelines/pipeline-generation.yml
@@ -26,6 +26,8 @@ parameters:
     default: 76
   - name: APIReview_AutoCreate_Configurations
     default: 93
+  - name: Cache_Secrets_for_CPP
+    default: 115
 
 jobs:
 - job: GeneratePipelines
@@ -98,6 +100,7 @@ jobs:
           --variablegroup ${{ parameters.Secrets_for_DevOps_Notification_Configuration_and_User_Resolution }}
           --variablegroup ${{ parameters.APIReview_AutoCreate_Configurations }}
           --variablegroup ${{ parameters.Secrets_for_Resource_Provisioner }}
+          --variablegroup ${{ parameters.Cache_Secrets_for_CPP }} 
       iOS:
         RepositoryName: azure-sdk-for-ios
         Prefix: ios
