--- a/tools/identity-resolution/identity-resolution/identity-resolution.csproj
+++ b/tools/identity-resolution/identity-resolution/identity-resolution.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.TeamFoundationServer.ExtendedClient" Version="16.170.0" />
     <PackageReference Include="Microsoft.VisualStudio.Services.Notifications.WebApi" Version="16.170.0" />
     <PackageReference Include="YamlDotNet" Version="6.1.1" />
+    <PackageReference Include="Azure.Identity" Version="1.5.0" />
   </ItemGroup>
 
 </Project>
