CODEOWNERS: Adding automation section (#2787)
Adding automation owners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,3 +1,10 @@
+################
+# Automation
+################
+
+# Git Hub integration and bot rules
+/.github/                        @AlexGhiondea @jsquire
+
 ###########
 # Eng Sys
 ###########
