--- a/tools/sdk-testgen/packages/autorest.gotest/test/integrationtest/output/signalr/test/__debug/go-tester.yaml
+++ b/tools/sdk-testgen/packages/autorest.gotest/test/integrationtest/output/signalr/test/__debug/go-tester.yaml
@@ -17517,6 +17517,7 @@ testModel:
                 nameAvailable: false
                 reason: AlreadyExists
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 location: $(location)
@@ -18611,6 +18612,7 @@ testModel:
                 tags:
                   key1: value1
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 parameters:
@@ -19429,6 +19431,7 @@ testModel:
                 tags:
                   key1: value1
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 resourceGroupName: $(resourceGroupName)
@@ -20519,6 +20522,7 @@ testModel:
                 tags:
                   key1: value1
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 parameters:
@@ -20646,6 +20650,7 @@ testModel:
               exampleName: SignalR_ListKeys
               expectedResponse: {}
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 resourceGroupName: $(resourceGroupName)
@@ -20722,6 +20727,7 @@ testModel:
               exampleName: SignalR_RegenerateKey
               expectedResponse: {}
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 parameters:
@@ -20787,6 +20793,7 @@ testModel:
               exampleName: SignalR_Restart
               expectedResponse: {}
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 resourceGroupName: $(resourceGroupName)
@@ -20965,6 +20972,7 @@ testModel:
                     limit: 100
                     unit: Count
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 location: $(location)
@@ -21738,6 +21746,7 @@ testModel:
                     tags:
                       key1: value1
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 resourceGroupName: $(resourceGroupName)
@@ -22504,6 +22513,7 @@ testModel:
                     tags:
                       key1: value1
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 subscriptionId: $(subscriptionId)
@@ -22627,6 +22637,7 @@ testModel:
                     isDataAction: false
                     properties: {}
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
               requestUpdate: []
@@ -22692,6 +22703,7 @@ testModel:
               exampleName: SignalR_Delete
               expectedResponse: *ref_693
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 resourceGroupName: $(resourceGroupName)
