--- a/tools/sdk-testgen/packages/autorest.testmodeler/test/integrationtest/output/signalr/model/__debug/test-modeler.yaml
+++ b/tools/sdk-testgen/packages/autorest.testmodeler/test/integrationtest/output/signalr/model/__debug/test-modeler.yaml
@@ -11117,6 +11117,7 @@ testModel:
                 nameAvailable: false
                 reason: AlreadyExists
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 location: $(location)
@@ -11881,6 +11882,7 @@ testModel:
                 tags:
                   key1: value1
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 parameters:
@@ -12451,6 +12453,7 @@ testModel:
                 tags:
                   key1: value1
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 resourceGroupName: $(resourceGroupName)
@@ -13211,6 +13214,7 @@ testModel:
                 tags:
                   key1: value1
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 parameters:
@@ -13320,6 +13324,7 @@ testModel:
               exampleName: SignalR_ListKeys
               expectedResponse: {}
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 resourceGroupName: $(resourceGroupName)
@@ -13379,6 +13384,7 @@ testModel:
               exampleName: SignalR_RegenerateKey
               expectedResponse: {}
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 parameters:
@@ -13430,6 +13436,7 @@ testModel:
               exampleName: SignalR_Restart
               expectedResponse: {}
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 resourceGroupName: $(resourceGroupName)
@@ -13569,6 +13576,7 @@ testModel:
                     limit: 100
                     unit: Count
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 location: $(location)
@@ -14088,6 +14096,7 @@ testModel:
                     tags:
                       key1: value1
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 resourceGroupName: $(resourceGroupName)
@@ -14602,6 +14611,7 @@ testModel:
                     tags:
                       key1: value1
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 subscriptionId: $(subscriptionId)
@@ -14696,6 +14706,7 @@ testModel:
                     isDataAction: false
                     properties: {}
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
               requestUpdate: []
@@ -14747,6 +14758,7 @@ testModel:
               exampleName: SignalR_Delete
               expectedResponse: *ref_455
               outputVariables: {}
+              outputVariablesModel: {}
               requestParameters:
                 api-version: 2021-06-01-preview
                 resourceGroupName: $(resourceGroupName)
