integrate dpg into pipeline (#2806)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -25,4 +25,4 @@
 /tools/stress-cluster/           @benbp @ckairen
 /tools/mock-service-host/        @changlong-liu @tadelesh
 /tools/sdk-testgen/              @changlong-liu @tadelesh
-/tools/js-sdk-release-tools/     @weidong @qiaozha
+/tools/js-sdk-release-tools/     @weidong @qiaozha @MaryGao
