Run stubgen on api test package to run same step as CI on actual package (#2809)

--- a/.azure-pipelines/apiview.yml
+++ b/.azure-pipelines/apiview.yml
@@ -189,7 +189,7 @@ stages:
           - script: |
               cd $(Build.SourcesDirectory)/$(PythonParserPackagePath)
               pip install tox
-              tox
+              tox -e pytest,stubgen
             displayName: 'Test Python Package Parser'
 
           - task: PublishTestResults@2
