--- a/packages/python-packages/api-stub-generator/tox.ini
+++ b/packages/python-packages/api-stub-generator/tox.ini
@@ -2,7 +2,7 @@
 # note that this envlist is the default set of environments that will run if a target environment is not selected.
 envlist = py310
 
-[testenv]
+[testenv:pytest]
 deps =
     pytest
     -rdev_requirements.txt
@@ -10,3 +10,8 @@ ignore_args=--ignore=.tox --ignore=build --ignore=.eggs
 default_pytest_params = --junitxml={toxinidir}/test-junit-{envname}.xml --verbose --durations=10
 commands =
     pytest {toxinidir}/tests
+
+
+[testenv:stubgen]
+commands =
+    apistubgen --pkg-path {toxinidir}/../apistubgentest --out-path {envtmpdir} --temp-path {envtmpdir} --verbose
