Making `docker` automation available to users of `archetype-sdk-tool-dotnet` (#2803)
* Add InformationalVersion to test-proxy csproj. This will display the nuget version that this version of the test-proxy dll was built for
* update test-proxy code in Startup.cs to output the full build number 
* Move containers/ci.yml docker logic to a common template that can be used elsewhere in the repo.
* Add docker container test/publish to archetype-tool-dotnet

--- a/eng/containers/ci.yml
+++ b/eng/containers/ci.yml
@@ -2,24 +2,10 @@ parameters:
 - name: DockerDeployments
   type: object
   default:
-  - name: test_proxy_linux
-    pool: 'ubuntu-20.04'
-    dockerRepo: 'engsys/testproxy-lin'
-    prepareScript: tools/test-proxy/docker/prepare.ps1
-    dockerFile: 'tools/test-proxy/docker/dockerfile'
-    stableTags:
-    - 'latest'
   - name: mock_attestation
     pool: 'ubuntu-20.04'
     dockerRepo: 'keyvault-mock-attestation'
     dockerFile: 'tools/keyvault-mock-attestation/Dockerfile'
-    stableTags:
-    - 'latest'
-  - name: test_proxy_windows
-    pool: 'windows-2019'
-    dockerRepo: 'engsys/testproxy-win'
-    prepareScript: tools/test-proxy/docker/prepare.ps1
-    dockerFile: 'tools/test-proxy/docker/dockerfile-win'
     stableTags:
     - 'latest'
   - name: stress_watcher
@@ -67,50 +53,9 @@ variables:
     value: $(build.buildid)
   - template: ../pipelines/templates/variables/globals.yml
 
-jobs:
-  - ${{ each config in parameters.DockerDeployments }}:
-    - job: container_build_${{ config.name }}
-      displayName: Deploy ${{ config.name }} Image
-      pool:
-        vmImage: ${{ config.pool }}
-      steps:
-        - ${{ if config.prepareScript }}:
-          - pwsh: |
-              ./${{ config.prepareScript }}
-            displayName: "Run prep script"
+extends:
+  template: ../pipelines/publish-docker-image.yml
+  parameters:
+    DockerDeployments: ${{ parameters.DockerDeployments }}
+    ImageTag: $(imageTag)
 
-        - task: Docker@2
-          displayName: Build ${{ config.name }}:$(imageTag)
-          inputs:
-            command: build
-            Dockerfile: ${{ config.dockerFile }}
-            tags: $(imageTag)
-            arguments: '-t $(containerRegistry).azurecr.io/${{ config.dockerRepo }}:$(imageTag)'
-
-        - task: Docker@2
-          displayName: Push ${{ config.name }}:$(imageTag)
-          condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
-          inputs:
-            containerRegistry: $(containerRegistry)
-            repository: ${{ config.dockerRepo }}
-            command: push
-            tags: $(imageTag)
-
-        - ${{ each stableTag in config.stableTags }}:
-          - task: Docker@2
-            displayName: Build ${{ config.name }}:${{ stableTag }}
-            inputs:
-              command: build
-              Dockerfile: ${{ config.dockerFile }}
-              tags: ${{ stableTag }}
-              arguments: '-t $(containerRegistry).azurecr.io/${{ config.dockerRepo }}:${{ stableTag }}'
-
-          - task: Docker@2
-            displayName: Push ${{ config.name }}:${{ stableTag }}
-            condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
-
-            inputs:
-              containerRegistry: $(containerRegistry)
-              repository: ${{ config.dockerRepo }}
-              command: push
-              tags: ${{ stableTag }}
