--- a/tools/test-proxy/ci.yml
+++ b/tools/test-proxy/ci.yml
@@ -26,3 +26,19 @@ extends:
   parameters:
     ToolDirectory: tools/test-proxy
     DotNetCoreVersion: "6.x"
+    DockerTagPrefix: '1.0.0-dev'
+    DockerDeployments:
+    - name: test_proxy_linux
+      pool: 'ubuntu-20.04'
+      dockerRepo: 'engsys/testproxy-lin'
+      prepareScript: tools/test-proxy/docker/prepare.ps1
+      dockerFile: 'tools/test-proxy/docker/dockerfile'
+      stableTags:
+      - 'latest'
+    - name: test_proxy_windows
+      pool: 'windows-2019'
+      dockerRepo: 'engsys/testproxy-win'
+      prepareScript: tools/test-proxy/docker/prepare.ps1
+      dockerFile: 'tools/test-proxy/docker/dockerfile-win'
+      stableTags:
+      - 'latest'
