correct docker image tagging to have missing period (#2814)

--- a/tools/test-proxy/ci.yml
+++ b/tools/test-proxy/ci.yml
@@ -26,7 +26,7 @@ extends:
   parameters:
     ToolDirectory: tools/test-proxy
     DotNetCoreVersion: "6.x"
-    DockerTagPrefix: '1.0.0-dev'
+    DockerTagPrefix: '1.0.0-dev.'
     DockerDeployments:
     - name: test_proxy_linux
       pool: 'ubuntu-20.04'
